package coralproto.exe_data;

import "model.proto";


// A timestamped variable value
message TimestampedValue
{
    required int32 timestep_id = 1;
    required model.ScalarValue value = 2;
}
